erste versuch jQuery

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id='modal-container'></div>
 <main>
     <div>
-        <ul class="joke-list"></ul>
+        <ul class="pokemon-list"></ul>
     </div>
 </main>
 <script
