--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="js/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <title>Simple JS App</title>
 </head>
@@ -13,10 +14,6 @@
         <ul class="pokemon-list"></ul>
     </div>
 </main>
-<script
-        src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
