--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <title>Simple JS App</title>
 </head>
 <body>
-<div id='modal-container'></div>
-<main>
-    <div>
-        <ul class="pokemon-list"></ul>
+<div class="page-header"></div>
+    <h1 class="title">
+        Pokedex
+    </h1>
+    <div id='modal-container'></div>
+    <div class="page-body">
+        <ul class="pokemon-list">
+        </ul>
     </div>
-</main>
+</div>
 <script src="js/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
