add Bootstrap button add Bootstrap modal add Bootstrap navbar add Bootstrap list group

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <title>Simple JS App</title>
 </head>
 <body>
-<div class="page-header"></div>
-    <h1 class="title">
-        Pokedex
-    </h1>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand">Pokedex</a>
+</nav>
     <div id='modal-container'></div>
     <div class="page-body">
-        <ul class="pokemon-list">
+        <ul class="list-group">
         </ul>
     </div>
 </div>
